# playground

./: .gitignore
beginning-java-trade/ch02/: pom.xml
beginning-java-trade/ch03/: pom.xml
beginning-java-trade/ch06/: pom.xml
beginning-java-trade/ch07/: pom.xml
beginning-java-trade/ch10/: pom.xml
c#/builder/: builder.sln
c#/helloworld/: helloworld.sln
c/client-server/: PF_INET_client.c  PF_INET_server.c  PF_LOCAL_server.c
c/gestiune-biblioteca/: examen.cpp  gestiune.cpp  gestiune.h  main.cpp  obiecte.cpp  obiecte.h  pozitie.cpp  utiliz.cpp  utiliz.h
c/playground/: hello-world.c  server.c
c/stock-ticker/: stock-ticker-file.c  stock-ticker.c
film-festival-planner/: .gitignore  pom.xml  todo.txt
haskell/kull/: kull.hs
haskell/monads/: Main.hs  Makefile  Monads.hs  RMonadTest.hs
haskell/real-world-haskell/: ch03.hs  ch04.hs  in.txt
haskell/scanner/: PL work.txt  Scanner.hs  answers.txt
haskell/shape-design/: Shape-complete.hs  Shape.hs
haskell/shapes/: Utils.hs
java-spring/spring-demo/: pom.xml
java/chat-admin/: ChatAdmin.java  ChatAdminManager.java  ChatRoom.java  InvalidPasswordException.java  LockException.java  Log.java  Refresh.java  Test.java  User.java  UserNotFoundException.java
java/church-ledger-installer/: build.bat  msiexec.txt  run-installer.bat
java/ema/: build.xml  install
java/instant-messenger/: im-client.bat
java/playground/: AlgoritmImpartireBinara.java  Announce.java  AppletMoo.java  Benchmark.java  CitireIntreg.java  CmdLineParser.java  DNS.java  Echo.java  FilePanel.java  HelloWorld.java  InternetAddress.java  NotADirectoryException.java  PipedSerialization.java  Pipes.java  RenameFilesUtility.java  Sleep.java  Test.java  TestFileStructure.java  WebPageReader.java  applet.html
java/swing-playground/: AppletChatClient.html  AppletChatClient.java  Appletx.java  (+2 more)
spring-tutorial/: build.properties  build.xml
university-work/utcn/sisteme de operare/linux/so/: Makefile.am  createHDD.c  main.cpp  test.c
university-work/utcn/sisteme de operare/linux/so/driver/: BlockMap.cpp  Directory.cpp  DirectoryEntry.cpp  DirectoryListing.cpp  FileBlocks.cpp  FileInputStream.cpp  FileOutputStream.cpp  FileSystemDriver.cpp  HDDDriver.cpp  HDDDriverCache.cpp  HDDFormatter.cpp  Inode.cpp  InodeMap.cpp  Makefile.am  Path.cpp  Superblock.cpp
university-work/utcn/sisteme de operare/linux/so/exceptions/: ArrayIndexOutOfBoundsException.cpp  FSException.cpp  FileNotFoundException.cpp  FileSizeTooLargeException.cpp  HardDiskNotInitializedException.cpp  IOException.cpp  InvalidBlockNumberException.cpp  InvalidDateException.cpp  InvalidHDDFileSizeException.cpp  Makefile.am  NotEnoughSpaceException.cpp  NullPointerException.cpp
university-work/utcn/sisteme de operare/linux/so/include/: Makefile.am  defs.h
university-work/utcn/sisteme de operare/linux/so/include/driver/: BlockMap.h  Directory.h  DirectoryEntry.h  DirectoryListing.h  FileBlocks.h  FileInputStream.h  FileOutputStream.h  FileSystemDriver.h  HDDDriver.h  HDDDriverCache.h  HDDFormatter.h  Inode.h  InodeMap.h  Makefile.am  Superblock.h  hdd.h
university-work/utcn/sisteme de operare/linux/so/include/exceptions/: ArrayIndexOutOfBoundsException.h  FSException.h  FileNotFoundException.h  FileSizeTooLargeException.h  HardDiskNotInitializedException.h  IOException.h  InvalidBlockNumberException.h  InvalidDateException.h  InvalidHDDFileSizeException.h  Makefile.am  NotEnoughSpaceException.h  NullPointerException.h
university-work/utcn/sisteme de operare/linux/so/include/utils/: Date.h  Makefile.am  PathParser.h  Utils.h  global.h  md5.h
university-work/utcn/sisteme de operare/linux/so/templates/: cpp_template  header_template
university-work/utcn/sisteme de operare/linux/so/utils/: Date.cpp  Makefile.am  PathParser.cpp  Utils.cpp  md5c.c
(+3783 files in other folders)
