####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libdriver.a

INCLUDES = $(all_includes)

libdriver_a_METASOURCES = AUTO

libdriver_a_SOURCES = FileSystemDriver.cpp Directory.cpp DirectoryListing.cpp Path.cpp FileBlocks.cpp FileOutputStream.cpp BlockMap.cpp FileInputStream.cpp HDDFormatter.cpp InodeMap.cpp Inode.cpp Inode.h HDDDriverCache.cpp Superblock.cpp HDDDriver.cpp DirectoryEntry.cpp 


EXTRA_DIST = DirectoryEntry.cpp HDDDriver.cpp Superblock.cpp HDDDriverCache.cpp Inode.h Inode.cpp InodeMap.cpp HDDFormatter.cpp FileInputStream.cpp BlockMap.cpp FileOutputStream.cpp FileBlocks.cpp Path.cpp DirectoryListing.cpp Directory.cpp FileSystemDriver.cpp 

####### kdevelop will overwrite this part!!! (end)############
