####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libexceptions.a

INCLUDES = $(all_includes)

libexceptions_a_METASOURCES = AUTO

libexceptions_a_SOURCES = FileSizeTooLargeException.cpp NotEnoughSpaceException.cpp InvalidDateException.cpp NullPointerException.cpp IOException.cpp HardDiskNotInitializedException.cpp InvalidHDDFileSizeException.cpp FileNotFoundException.cpp InvalidBlockNumberException.cpp FSException.cpp ArrayIndexOutOfBoundsException.cpp 


EXTRA_DIST = ArrayIndexOutOfBoundsException.cpp FSException.cpp InvalidBlockNumberException.cpp FileNotFoundException.cpp InvalidHDDFileSizeException.cpp HardDiskNotInitializedException.cpp IOException.cpp NullPointerException.cpp InvalidDateException.cpp NotEnoughSpaceException.cpp FileSizeTooLargeException.cpp 

####### kdevelop will overwrite this part!!! (end)############
