####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libutils.a

INCLUDES = $(all_includes)

libutils_a_METASOURCES = AUTO

libutils_a_SOURCES = PathParser.cpp Date.cpp md5c.c Utils.cpp 


EXTRA_DIST = Utils.cpp md5c.c Date.cpp PathParser.cpp 

####### kdevelop will overwrite this part!!! (end)############
