####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = DirectoryEntry.h DirectoryListing.h FileSystemDriver.h HDDDriver.h Superblock.h HDDDriverCache.h HDD.h Inode.h InodeMap.h HDDFormatter.h FileInputStream.h BlockMap.h FileOutputStream.h FileBlocks.h Directory.h 

####### kdevelop will overwrite this part!!! (end)############
